[package]
name = "bookd-ceo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "color"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["io-std", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1"
uuid = { version = "1.19.0", features = ["serde"] }
